WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96410
[BlackBerry] Fix history navigation for error pages.
https://bugs.webkit.org/show_bug.cgi?id=96410
Summary
[BlackBerry] Fix history navigation for error pages.
Konrad Piascik
Reported
2012-09-11 10:39:26 PDT
[BlackBerry] Fix history navigation for error pages.
Attachments
Patch
(3.90 KB, patch)
2012-09-11 10:42 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2012-09-11 10:42:40 PDT
Created
attachment 163400
[details]
Patch
Rob Buis
Comment 2
2012-09-11 10:48:28 PDT
Comment on
attachment 163400
[details]
Patch Looks good.
WebKit Review Bot
Comment 3
2012-09-11 11:32:26 PDT
Comment on
attachment 163400
[details]
Patch Clearing flags on attachment: 163400 Committed
r128211
: <
http://trac.webkit.org/changeset/128211
>
WebKit Review Bot
Comment 4
2012-09-11 11:32:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug